<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtCheckData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="CHECK DATA"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fullName" />

    <TextView
        android:id="@+id/txtBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birthday" />

    <TextView
        android:id="@+id/txtTelephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telephone" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email" />

    <TextView
        android:id="@+id/txtDescriptionContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descriptionContact" />

        <Button
            android:id="@+id/btnEditData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Edit Data"
            android:onClick="goMainActivity"/>

</LinearLayout>