<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edtFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fullName"
        android:maxLength="50"
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingRight="@dimen/paddingRight" />

    <EditText
        android:id="@+id/edtBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/birthday"
        android:inputType="date"
        android:maxLines="1"
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingRight="@dimen/paddingRight" />


    <EditText
        android:id="@+id/edtTelephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telephone"
        android:maxLength="10"
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingRight="@dimen/paddingRight" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:maxLines="1"
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingRight="@dimen/paddingRight" />

    <EditText
        android:id="@+id/edtDescriptionContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descriptionContact"
        android:maxLines="1"
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingRight="@dimen/paddingRight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:onClick="goCheckData"
            android:text="@string/next" />

    </LinearLayout>

</LinearLayout>